# homelab-pyinfra

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  deploy.py  mise.toml  pyproject.toml
.github/workflows/: ci.yml
deploy/: __init__.py  backup.py  common.py  docker.py  monitoring.py  security.py  utils.py
docs/: DEPLOYMENT_OPTIONS.md  QUICKSTART.md  TESTING.md
group_data/: linux.py  synology.py
inventory/: inventory.py
templates/: homelab-backup.sh.j2  sshd_config.j2
tests/: __init__.py  conftest.py  test_common.py  test_docker.py  test_linux_hosts.py  test_synology.py  test_unifi.py
